Implement payroll APIs
